RESOLVED FIXED36056
[GTK] DRT does not handle cookie policy setting
https://bugs.webkit.org/show_bug.cgi?id=36056
Summary [GTK] DRT does not handle cookie policy setting
Gustavo Noronha (kov)
Reported 2010-03-12 07:54:55 PST
We need an implementation for layoutTestController.setAcceptCookiePolicy. Two tests should be using it, and are currently failing.
Attachments
fix cookie acceptance policy (4.87 KB, patch)
2010-03-12 07:58 PST, Gustavo Noronha (kov)
eric.carlson: review+
gustavo: commit-queue-
Gustavo Noronha (kov)
Comment 1 2010-03-12 07:58:28 PST
Created attachment 50599 [details] fix cookie acceptance policy
Eric Seidel (no email)
Comment 2 2010-03-15 16:06:58 PDT
Attachment 50599 [details] was posted by a committer and has review+, assigning to Gustavo Noronha Silva for commit.
Gustavo Noronha (kov)
Comment 3 2010-03-17 06:58:29 PDT
This has been committed already.
Note You need to log in before you can comment on or make changes to this bug.