2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Eric Carlson.

        [GTK] DRT does not handle cookie policy setting
        https://bugs.webkit.org/show_bug.cgi?id=36056

        Implement cookie accept policy setting for GTK+'s LayoutTestController.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setAlwaysAcceptCookies):

LayoutTests

2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Eric Carlson.

        [GTK] DRT does not handle cookie policy setting
        https://bugs.webkit.org/show_bug.cgi?id=36056

        Fix tests to request that the cookie acceptance policy always allows cookies.

        * http/tests/media/video-cookie.html:
        * http/tests/media/video-referer.html:

Canonical link: https://commits.webkit.org/47199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55904 268f45cc-cd09-0410-ab3c-d52691b4dbfc